[fix](ABC-1478): Button - Fix loading spinner backdrop going out of bounds (#1072)
* [fix](ABC-1478): Button - Fix loading spinner backdrop going out of button bounds

* [fix](ABC-1128): Icon Picker - Add preventDefault to avoid anchor tag invocation

--- a/src/modules/base/button/button.css
+++ b/src/modules/base/button/button.css
@@ -6,6 +6,9 @@
     border-width: var(--avonni-button-sizing-border, 1px);
     border-style: var(--avonni-button-styling-border, solid);
     justify-content: var(--avonni-button-horizontal-alignment, center);
+
+    /* Prevent the spinner from overflowing the button */
+    overflow: hidden;
 }
 
 .avonni-button:hover.avonni-button_border,
